assets/style.css
:root {
    /* colors */
    --cream: #F1DED4;
    --red: #E92527;
    --orange: #F04F25;
    --light-orange: #F4A375;
    --light-brown: #C8894A;
    --mid-brown: #A0622A;
    --dark-brown: #6B3A1F;
    --ink: #1A0A00;
    --scoreboard-background: #0C0500;
    /* With changing my nav to a scoreboard, I needed non active buttons to be darker */
    /* I was originally trying to do the HEX code followed by a percentage, the built in agent switched it to rgba for me */
    /* This shows the color, and the opacity */
    --nav-light: rgba(240, 79, 37, 0.25);

    /* I wanted to add glow shadows to make it feel like a scoreboard */
    /* I found text shadow on MDN */
    /* The way I wrote it is color, x offset, y offset, blur radius */
    --glow-orange: var(--orange) 0 0 0.5rem;
    --glow-cream: var(--cream) 0 0 0.5rem;
    /* I might get rid of this since I changed my theme, idk yet */


    /* fonts */
    --body-font: "vandertak-regular", sans-serif;
    --heading-font: "dirty-bakers-dozen", sans-serif;
    --scoreboard-font: monospace;


    /* type scale */
    --body-copy: 1rem;
    --small-heading-copy: calc(var(--body-copy) * 1.25);
    --label-copy: calc(var(--body-copy) * 1.75);
    --heading-copy: calc(var(--body-copy) * 4);


    /* layout */
    --spacing-small: 1rem;
    --spacing-xs: calc(var(--spacing-small) * 0.5);
    --spacing-medium: calc(var(--spacing-small) * 2);
    --spacing-large: calc(var(--spacing-small) * 4);
    --court-lines: 0.2rem;
    --max-width: 90rem;
}


body {
    background-color: var(--scoreboard-background);

    p {
        font-family: var(--body-font);
        color: var(--ink);
        font-size: var(--body-copy);
    }
}



/****************  NAVIGATION BAR  ****************/
nav{
    position: sticky;
    top: 0;
    z-index: 100;
    background-color: var(--ink);
    padding-block: var(--spacing-small);
    padding-inline: calc(var(--spacing-small) * 2);
    border-block-end: solid var(--orange) var(--court-lines);
}


nav ul {
    display: flex;
    /* justify-content: center; */
    /* removing this justify content let me see my first button */
    gap: var(--spacing-small);
    /* from week 9 class site for overflow, since I didn't want to fit everything onto the screen, this allows for the scroll to happen on mobile */
    overflow-y: auto;
}

.button {
    font-family: var(--scoreboard-font);
    font-size: var(--small-heading-copy);
    color: var(--nav-light);
    padding-block: var(--spacing-xs);
    padding-inline: var(--spacing-small);
    border: var(--orange) solid transparent;

    &:hover {
        color: var(--orange);
        text-shadow: var(--glow-orange);
    }

    &.active {
        color: var(--orange);
        text-shadow: var(--glow-orange);
        border-color: var(--orange);
    }
}

@media (width > 640px) {
    nav ul {
        justify-content: center;
        gap: var(--spacing-medium);
    }

    .button {
        font-size: calc(0.75 * var(--label-copy));
    }
}




/****************** HEADER ********************/
header {
    padding-block: var(--spacing-large);
    padding-inline: var(--spacing-medium);
    max-width: var(--max-width);
    margin-inline: auto;

    .arena-link{
        margin-block-start: var(--spacing-small);
        a {
            color: var(--light-brown);
            font-size: calc(0.85 * var(--body-copy));
            font-family: var(--scoreboard-font);
            text-decoration: underline;
            text-underline-offset: 0.5rem;
            
            &:hover {
                color: var(--orange);
                text-shadow: var(--glow-orange);
            }
        }
    }
    
    #channel-description {
        padding: 0;
        margin: 0;
    }
    #channel-description p{
        color: var(--light-brown);
        font-family: var(--body-font);
        font-size: calc(1.2 * var(--body-copy));
        line-height: 1.5rem;
    } 


     .header-stats {
            border: solid var(--mid-brown) var(--court-lines);
            background-color: var(--ink);
            max-width: calc(0.3 * var(--max-width));

            .stats {
                padding-block: var(--spacing-xs);
                padding-inline: var(--spacing-small);
                display: flex;
                flex-direction: column;
                gap: var(--spacing-xs);
                border-block-end: solid var(--mid-brown) var(--court-lines);
                &:last-child {
                    border-block-end: 0;
                }

                .heading-label {
                    font-family: var(--scoreboard-font);
                    font-size: calc(0.7 * var(--body-copy));
                    color: var(--orange);
                    letter-spacing: 0.25rem;
                    font-weight: 700;
                }

                #channel-count, p {
                    color: var(--light-brown);
                    font-size: calc(1.2 * var(--body-copy));
                }
            }
        }
}

.year {
    font-family: var(--scoreboard-font);
    color: var(--mid-brown);
    display: block;
    font-size: calc(0.70 * var(--body-copy));
    letter-spacing: 0.25rem;
}



/* I had to move this outside of the header tag, but I don't understand why. I assumed this display:flex would work on the heading section. */
/* Oh wait. I think it is because title and header-stats are two sections inside the heading.section, okay that makes sense. Don't mind this, this is for me to remember */
.heading-section {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-medium);

    @media (width > 768px) {
        flex-direction: row;
    }
}



h4 {
    font-family: var(--scoreboard-font);
    font-size: var(--body-copy);
    color: var(--cream);
    text-shadow: var(--glow-cream);
    letter-spacing: 0.70rem;
    padding: var(--spacing-xs);
    display: inline-block;
}





/* this is all temporary */
.text p {
    color: var(--orange);
}

.text-block h4 {
    display: block;
}

.image p {
    color: var(--orange);
}

.image-block img{
    max-width: calc(0.4 * var(--max-width));
}
/* temporary */






h1 {
    font-family: var(--heading-font);
    font-size: var(--heading-copy);
    color: var(--orange);
    line-height: 1;
    /* I wanted to add background shadows to make it feel like a basketball */
    /* I found text shadow on MDN */
    /* The way I wrote it is color, x offset, y offset, blur radius */
    text-shadow: var(--dark-brown) 0.1rem 0.1rem 0, var(--red) 0.2rem 0.2rem;
   
}
@media (width < 768px) {
    h1 {
        font-size: calc(0.7 * var(--heading-copy));
    }
}







main {
    padding-block: var(--spacing-small); 

    .cards {
        overflow: hidden;
        padding-inline: var(--spacing-large);
    }
}


#channel-blocks {
    counter-reset: card-number;
    /* this initializes the custom counter */
    /* I am starting it at #1, so I won't specify a value  */
    /* this is from a youtube video, because I wasn't entirely sure how exactly counters work */
    display: flex;
    flex-direction: row;
    gap: var(--spacing-medium);
    overflow-x: auto;
    padding-block: var(--spacing-medium);
    padding-inline: var(--spacing-small);
    scrollbar-color: var(--mid-brown) transparent;
    scrollbar-width: thin;
    cursor: pointer;

    &.show-images {
        li {
            display: none;
        }
        li.image-block {
            display: block;
        }
    }

    &.show-links {
        li {
            display: none;
        }
        li.link-block {
            display: block;
        }
    }

    &.show-videos {
        li {
            display: none;
        }
        li.linked-video-block {
            display: block;
        }
    }

    &.show-text {
        li {
            display: none;
        }
        li.text-block {
            display: block;
        }
    }
}

@media (width > 1250px) {
    #channel-blocks {
    display: grid;
    grid-template-rows: repeat(2, 27rem);
    grid-auto-flow: column;
    }
}

#channel-blocks li {
    min-width: calc(16 * var(--spacing-small));
    width: calc(16 * var(--spacing-small));
    height: calc(27 * var(--spacing-small));
    padding: 0rem 0rem calc(2.5 *var(--spacing-small)) 0rem;
    box-sizing: border-box;
    background-color: var(--cream);
    border-radius: 0.3rem;
    overflow: hidden;
    position: relative;
    border-block-start: solid var(--orange) calc(3 * var(--court-lines));
    /* I wanted to add a shadow behind the cards */
    /* I found this on MDN */
    /* It lets me add a box shadow behind my cards, so I added two of them */
    box-shadow: 0.3rem 0.3rem 0 var(--dark-brown), 0.5rem 0.5rem 0 var(--mid-brown);
    filter: sepia(0.2) contrast(1);
    /* from MDN */
    /* I wanted the cards to have a vintage look, so I added a sepia filter */
    transition: box-shadow 0.3s ease;
    &:hover {
        box-shadow: 
            0.3rem 0.8rem 0 var(--dark-brown), 0.5rem 1.1rem 0 var(--mid-brown);
    }

    /* I needed to have this stuff gone */
    p, h4, figcaption {
        display: none;
    }

    figure, iframe, picture, img {
        width: 100%;
        height: 100%;
        display: block;
    }

    /* ask if there is a way to get whatever is figure to not scale to fit */

    .card-title {
        font-family: var(--scoreboard-font);
        font-size: var(--body-copy);
        color: var(--dark-brown);
    }
   
    

    &::after {
        content: counter(card-number, upper-roman);
        /* this displays the current counter value, using the content property of the before psudo-element of each list item*/
        /* this is from a youtube video, because I wasn't entirely sure how exactly counters work */
        counter-increment: card-number;
        /* tells when the counter should increase and decrease, and by how much */
        /* I won't specify a value */
        /* this is from a youtube video, because I wasn't entirely sure how exactly counters work */
        /* https://www.youtube.com/watch?v=hDg7yuHXBm4 */
        position: absolute;
        font-family: var(--scoreboard-font);
        font-size: calc(0.75 * var(--body-copy));
        font-weight: 700;
        color: var(--light-brown);
        inset-block-end: calc(1.25 * var(--spacing-xs));
        inset-inline-end: var(--spacing-small);
    }
    /* I wasn't sure why I couldn't get the before pseudo-element to work for two items */
    /* I learned that the before and after can only target the first child of the element */
    &::before {
        content:'1998 SERIES';
        position: absolute;
        font-family: var(--scoreboard-font);
        font-size: calc(0.75 * var(--body-copy));
        font-weight: 700;
        color: var(--light-brown);
        inset-block-end: calc(1.25 * var(--spacing-xs));
        inset-inline-start: var(--spacing-small);
    }
}



/* @media (width > 1250px) {
    #channel-blocks {
    display: grid;
    grid-template-columns: 3fr 3fr;
    padding: calc(var(--padding) * 1/2);
    gap: 2rem;
    list-style: none;
    }
} */




/* WORDBREAK ATTRIBUTION */
/* I needed basketball to be broken up because it was too long for mobile, sizing was becoming arduous */
/* I couldn't figure out how to do this from MDN, because I was familiar with only non breaking space*/
/* I used GPT to see if it was possible to do a word break, and it said to change the title in the arena.js file with the word break attatched, so I did that */
/* And then I did display none, media query display inline, and it worked for mobile only */
/* After struggling with the h1 sizing, I swapped out the variable for "vw" and it is behaving much better, so I don't think I need the wbr anymore? */
/* I need it, I added a break point back inside the arena.js file, and now this is working */
/* wbr {
    display: none;
} 

@media (width < 768px) {
    wbr {
        display: inline;
    }
}  */

